Integrating old code; Resume Coding.

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -13,9 +13,24 @@ menu.title.global.score = Score Global Ratings
 menu.title.help = Help
 menu.title.help.about = About
 menu.title.help.online = Online Help
+btn.playpause=Play/Pause
+btn.rewind=Rewind 5s
+btn.startCoding = Start Coding
+btn.tt.PlayPause = Play and Pause Audio File
+btn.tt.Replay = Replay the last utterance i think...
+btn.tt.Uncode = Uncode the last utterance
+btn.tt.UncodeReplay = Uncode then replay the last utterance
+btn.tt.Rewind = Rewind to somewhere...
+pnl.title.timeline = Timeline
+pnl.title.prevUtr = Previous Utterance
+pnl.title.currUtr = Current Utterance
+pnl.title.codes.left = Therapist
+pnl.title.codes.right = Client
+lbl.enumeration = Enumeration:
+lbl.miscCode = MISC Code:
+lbl.miscStartTime = Start Time:
+lbl.miscEndTime = End Time:
 
 
 txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.10.0\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
-btn.playpause=Play/Pause
-btn.rewind=Rewind 5s
 txt.help.message=Please visit http://casaa.unm.edu for the latest reference manual.
