Integrating old code; Most MISC functionality implemented.

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -17,10 +17,11 @@ btn.playpause=Play/Pause
 btn.rewind=Rewind 5s
 btn.startCoding = Start Coding
 btn.tt.PlayPause = Play and Pause Audio File
-btn.tt.Replay = Replay the last utterance i think...
-btn.tt.Uncode = Uncode the last utterance
+btn.tt.Replay = Replay from beginning of current utterance
+btn.tt.Uncode = Remove last utterance
 btn.tt.UncodeReplay = Uncode then replay the last utterance
 btn.tt.Rewind = Rewind to somewhere...
+btn.tt.startCoding = Code the current audio file
 pnl.title.timeline = Timeline
 pnl.title.prevUtr = Previous Utterance
 pnl.title.currUtr = Current Utterance
