Integrating old code; Included TimeLine.

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -20,7 +20,7 @@ btn.tt.PlayPause = Play and Pause Audio File
 btn.tt.Replay = Replay from beginning of current utterance
 btn.tt.Uncode = Remove last utterance
 btn.tt.UncodeReplay = Uncode then replay the last utterance
-btn.tt.Rewind = Rewind to somewhere...
+btn.tt.Rewind = Rewind 5 seconds
 btn.tt.startCoding = Code the current audio file
 pnl.title.timeline = Timeline
 pnl.title.prevUtr = Previous Utterance
