Changes to Menu selections and text; Some of which might go away if tabs are used.

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -2,14 +2,15 @@ wind.title.main = CACTI2 \: The CASAA Apllication for Coding Treatment Interacti
 wind.title.help = Online Help
 wind.title.about = About
 menu.title.file = _File
-menu.title.file.load = Load Audio File
+menu.title.file.load.audio = Load Audio File
+menu.title.file.load.casaa = Load Casaa File
 menu.title.file.prefs = Preferences
-menu.title.file.exit = Exit
+menu.title.file.exit = Quit
 menu.title.code = Code Utterances
-menu.title.code.start = Start Coding a File
-menu.title.code.resume = Resume Coding a File
+menu.title.code.start = New Coding Session
+menu.title.code.resume = Resume Coding Session
 menu.title.global.ratings = Global Ratings
-menu.title.global.score = Score Global Ratings
+menu.title.global.score = Score
 menu.title.help = Help
 menu.title.help.about = About
 menu.title.help.online = Online Help
