--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -1,4 +1,4 @@
-wind.title.main = CACTI2 \: The CASAA Apllication for Coding Treatment Interactions \: v0.00.0
+wind.title.main = CACTI2 \: The CASAA Apllication for Coding Treatment Interactions \: v0.20.0
 wind.title.help = Online Help
 wind.title.about = About
 menu.title.file = _File
@@ -34,5 +34,6 @@ lbl.miscStartTime = Start Time:
 lbl.miscEndTime = End Time:
 
 
-txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.10.0\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
+txt.version = 0.20.0
+txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.20.0\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nCurrent developer:\njosef ling\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
 txt.help.message=Please visit http://casaa.unm.edu for the latest reference manual.
