Better User Config management.

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -32,7 +32,11 @@ lbl.enumeration = Enumeration:
 lbl.miscCode = MISC Code:
 lbl.miscStartTime = Start Time:
 lbl.miscEndTime = End Time:
-
+alert.config.title = Missing Config File
+alert.config.text = The User Configuration file could not found.\nIf you would like to use a file from a different location click 'Select'. If you would like to generate a default click 'Create'.
+alert.config.btn1.text = Create
+alert.config.btn2.text = Select
+alert.config.btn3.text = Cancel
 
 txt.version = 0.20.0
 txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.20.0\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nCurrent developer:\njosef ling\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
