Improved error trapping throughout. Some code clean up. Changed player sliders.

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -33,7 +33,7 @@ lbl.miscCode = MISC Code:
 lbl.miscStartTime = Start Time:
 lbl.miscEndTime = End Time:
 alert.config.title = Missing Config File
-alert.config.text = The User Configuration file could not found.\nIf you would like to use a file from a different location click 'Select'. If you would like to generate a default click 'Create'.
+alert.config.text = The User Configuration file was not found.\nIf you would like to locate an existing file click 'Select'. If you would like to generate a default click 'Create'.
 alert.config.btn1.text = Create
 alert.config.btn2.text = Select
 alert.config.btn3.text = Cancel
