--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -1,4 +1,4 @@
-wind.title.main = CACTI2 \: The CASAA Apllication for Coding Treatment Interactions \: v0.20.0
+wind.title.main = CACTI2 \: The CASAA Apllication for Coding Treatment Interactions \: v0.20.1
 wind.title.help = Online Help
 wind.title.about = About
 menu.title.file = _File
@@ -14,6 +14,13 @@ menu.title.global.score = Score
 menu.title.help = Help
 menu.title.help.about = About
 menu.title.help.online = Online Help
+
+btn.txt.PlayPause = Play and Pause Audio File
+btn.txt.Replay = Replay from beginning of current utterance
+btn.txt.Uncode = Remove last utterance
+btn.txt.UncodeReplay = Uncode then replay the last utterance
+btn.txt.Rewind = Rewind
+
 btn.playpause=Play/Pause
 btn.rewind=Rewind 5s
 btn.startCoding = Start Coding
@@ -24,20 +31,21 @@ btn.tt.UncodeReplay = Uncode then replay the last utterance
 btn.tt.Rewind = Rewind 5 seconds
 btn.tt.startCoding = Code the current audio file
 pnl.title.timeline = Timeline
-pnl.title.prevUtr = Previous Utterance
-pnl.title.currUtr = Current Utterance
+pnl.title.Utr = Utterance
 pnl.title.codes.left = Therapist
 pnl.title.codes.right = Client
 lbl.enumeration = Enumeration:
 lbl.miscCode = MISC Code:
 lbl.miscStartTime = Start Time:
 lbl.miscEndTime = End Time:
+lbl.prevUtr = Previous
+lbl.currUtr = Current
 alert.config.title = Missing Config File
 alert.config.text = The User Configuration file was not found.\nIf you would like to locate an existing file click 'Select'. If you would like to generate a default click 'Create'.
 alert.config.btn1.text = Create
 alert.config.btn2.text = Select
 alert.config.btn3.text = Cancel
 
-txt.version = 0.20.0
-txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.20.0\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nCurrent developer:\njosef ling\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
+txt.version = 0.20.1
+txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.20.1\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nCurrent developer:\njosef ling\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
 txt.help.message=Please visit http://casaa.unm.edu for the latest reference manual.
