--- a/src/RELEASE-NOTES.txt
+++ b/src/RELEASE-NOTES.txt
@@ -1,3 +1,12 @@
+------ 0.30.0 ------
+201600909 - jl
+--------------------
+
+CHANGES:
+- None
+
+KNOWN ISSUES:
+- None
 
 ------ 0.20.2 ------
 20160811 - jl
