--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -31,15 +31,13 @@ btn.tt.UncodeReplay = Uncode then replay the last utterance
 btn.tt.Rewind = Rewind 5 seconds
 btn.tt.startCoding = Code the current audio file
 pnl.title.timeline = Timeline
-pnl.title.Utr = Utterance
 pnl.title.codes.left = Therapist
 pnl.title.codes.right = Client
 lbl.enumeration = Enumeration:
 lbl.miscCode = MISC Code:
 lbl.miscStartTime = Start Time:
 lbl.miscEndTime = End Time:
-lbl.prevUtr = Previous
-lbl.currUtr = Current
+lbl.prevUtr = Last Utterance:
 alert.config.title = Missing Config File
 alert.config.text = The User Configuration file was not found.\nIf you would like to locate an existing file click 'Select'. If you would like to generate a default click 'Create'.
 alert.config.btn1.text = Create
