--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -1,4 +1,4 @@
-wind.title.main = CACTI2 \: The CASAA Apllication for Coding Treatment Interactions \: v0.30.0
+wind.title.main = CACTI \: The CASAA Apllication for Coding Treatment Interactions \: v0.30.0
 wind.title.help = Online Help
 wind.title.about = About
 menu.title.file = _File
