- key codes for moving player - smaller block increment on sldSeek - code buttons resize with main window - user can switch user config file

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -4,6 +4,7 @@ wind.title.about = About
 menu.title.file = _File
 menu.title.file.load.audio = Load Audio File
 menu.title.file.load.casaa = Load Casaa File
+menu.title.file.load.config = Load User Config
 menu.title.file.prefs = Preferences
 menu.title.file.exit = Quit
 menu.title.code = Code Utterances
@@ -37,6 +38,8 @@ lbl.enumeration = Enumeration:
 lbl.miscCode = MISC Code:
 lbl.miscStartTime = Start Time:
 lbl.miscEndTime = End Time:
+lbl.miscFile = Code File:
+lbl.configFile = Config File:
 lbl.prevUtr = Last Utterance:
 alert.config.title = Missing Config File
 alert.config.text = The User Configuration file was not found.\nIf you would like to locate an existing file click 'Select'. If you would like to generate a default click 'Create'.
