--- a/src/RELEASE-NOTES.txt
+++ b/src/RELEASE-NOTES.txt
@@ -1,3 +1,12 @@
+------ 0.50.0 ------
+20170426 - jl
+--------------------
+CHANGES:
+- Remove support for MP3; Add support for M4A.
+- Update icon sets.
+
+
+
 ------ 0.41.0 ------
 20170308 - jl
 --------------------
