Start testing settings dialog. This commit is broken but i want to download elsewhere to work on it.

--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -12,6 +12,8 @@ menu.title.code.start = New Coding Session
 menu.title.code.resume = Resume Coding Session
 menu.title.global.ratings = Global Ratings
 menu.title.global.score = Score
+menu.title.settings = Settings
+menu.title.settings.kb = Keyboard Shortcuts
 menu.title.help = Help
 menu.title.help.about = About
 menu.title.help.online = Online Help
@@ -48,6 +50,13 @@ alert.config.btn2.text = Select
 alert.config.btn3.text = Cancel
 
 txt.version = 0.50.0
+txt.settings.kb.message = Enter coding button keyboard shortcuts
+txt.settings.kb.instructions = Click on the text box then press a number or letter key. The shift key is assumed and is used as the modifier in the application.
+txt.settings.kb.codingbtn = Coding Button
+txt.settings.kb.shortcut = Keyboard Shortcut
+txt.settings.kb.uncode = Uncode
+txt.settings.kb.replay = Replay
+txt.settings.kb.uncode_replay = Uncode/Replay
 txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.50.0\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nCurrent developer:\njosef ling\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
 txt.about.title = About CACTI
 txt.help.message=Please visit http://casaa.unm.edu for the latest reference manual.
