--- a/src/RELEASE-NOTES.txt
+++ b/src/RELEASE-NOTES.txt
@@ -1,4 +1,11 @@
 ------ 0.60.0 ------
+20170627 - jl
+--------------------
+CHANGES:
+Fix typo
+
+
+------ 0.60.0 ------
 20170505 - jl
 --------------------
 CHANGES:
