--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -57,3 +57,6 @@ txt.settings.kb.uncode_rewind = Uncode/Rewind
 txt.about = CACTI | The CASAA Application for Coding Treatment Interactions\n\nVersion 0.60.1\nCopyright (C) 2009\n\nOriginal developers:\nAlex Manuel\nCarl Staaf\n\nCurrent developer:\njosef ling\n\nThe latest version, source code, and help manual can be downloaded from http://casaa.unm.edu.\n\nThis application is being developed to assist the research of Theresa B. Moyers of the Center on Alcoholism, Substance Abuse and Addictions at the University of New Mexico Albuquerque, NM  Unless otherwise stated, this software is free and open source, per the terms of the GNU Public License: http://www.gnu.org/licenses/gpl-3.0.txt
 txt.about.title = About CACTI
 txt.help.message=Please visit http://casaa.unm.edu for the latest reference manual.
+alert.missingAudioFile.title = "Error Loading Audio File"
+alert.missingAudioFile.btn1.text = Locate File
+alert.missingAudioFile.btn2.text = Cancel
