--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -7,16 +7,17 @@ menu.title.file.load.casaa = Load Casaa File
 menu.title.file.load.config = Load User Config
 menu.title.file.prefs = Preferences
 menu.title.file.exit = Quit
-menu.title.code = Code Utterances
-menu.title.code.start = New Coding Session
-menu.title.code.resume = Resume Coding Session
-menu.title.global.ratings = Global Ratings
-menu.title.global.score = Score
+menu.title.codingview = _Coding and Rating
+menu.title.codingview.utterances = Code Utterances
+menu.title.codingview.ratings = Score Global Ratings
 menu.title.settings = Settings
 menu.title.settings.kb = Keyboard Shortcuts
 menu.title.help = Help
 menu.title.help.about = About
 menu.title.help.online = Online Help
+menu.title.session = _Session
+menu.title.session.start = Start New Session
+menu.title.session.resume = Resume Previous Session
 
 btn.txt.PlayPause = Play and Pause Audio File
 btn.txt.Replay = Replay from beginning of current utterance
