--- a/src/strings_en_US.properties
+++ b/src/strings_en_US.properties
@@ -18,6 +18,7 @@ menu.title.help.online = Online Help
 menu.title.session = _Session
 menu.title.session.start = Start New Session
 menu.title.session.resume = Resume Previous Session
+menu.title.session.report = Summary Report
 
 btn.txt.PlayPause = Play and Pause Audio File
 btn.txt.Replay = Replay from beginning of current utterance
