--- a/src/RELEASE-NOTES.txt
+++ b/src/RELEASE-NOTES.txt
@@ -1,3 +1,10 @@
+------ 0.90.1 ------
+20181022 - jl
+--------------------
+- TimeLineMarkers now indicate if an utterance has been annotated.
+- Addressed cosmetics issues on platforms.
+
+
 ------ 0.90.0 ------
 20181011 - jl
 --------------------
